[package]
name = "mytz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
lru = "0.13.0"
once_cell = "1.20.2"
regex = "1.11.1"
reqwest =  { version = "0.12.12", features = ["blocking", "json"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
urlencoding = "2.1.3"
